# miip

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
src/miip/: config.py  db.py  embeddings.py  graph.py  main.py  state.py
src/miip/agents/: asr_agent.py  log_rag_agent.py  router_agent.py  synthesis_agent.py  vision_agent.py
src/miip/api/: routes.py
src/miip/static/: index.html
tests/eval/: eval_results.json  run_eval.py  synthetic_incidents.json  test_ci_gate.py
