[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miip"
version = "0.1.0"
description = "Multimodal Incident Intelligence Platform — on-call co-pilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-postgres>=0.1.0",
    "sentence-transformers>=2.7.0",
    "openai>=1.30.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "ragas>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/miip"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
